fixing tags, attempting to align linkedin share button

--- a/css/adello.css
+++ b/css/adello.css
@@ -189,3 +189,8 @@ input:hover[type="submit"] {
     background: #ccc;
     color: #777;
 }
+
+/* fix misalignment of LinkedIn share button */
+.IN-widget {
+    vertical-align: top!important;
+}
